--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_time_entries">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.chronometron.test.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/navigation_customizer"
+        android:name="com.chronometron.test.ui.Customizer.CustomizerFragment"
+        android:label="Customizer"
+        tools:layout="@layout/fragment_customizer" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.chronometron.test.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_time_entries"
+        android:name="com.chronometron.test.ui.TimeEntries.TimeEntriesFragment"
+        android:label="Time Entries"
+        tools:layout="@layout/fragment_time_entries" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.chronometron.test.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_statistics"
+        android:name="com.chronometron.test.ui.Statistics.StatisticsFragment"
+        android:label="Statistics"
+        tools:layout="@layout/fragment_statistics" />
 </navigation>
