--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,13 +3,13 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF018786</color>
-    <color name="teal_700">#FF00695C</color>
+    <color name="teal_200">#00B4D8</color>
+    <color name="teal_700">#00B4D8</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="google_red">#DB4437</color> <!-- Google's red color, can adjust if needed -->
     <color name="github_black">#333333</color> <!-- A common GitHub dark color, can adjust if needed -->
-    <color name="dark_blue">#000033</color> <!-- You can adjust the actual color code as needed -->
+    <color name="dark_blue">#03045E</color> <!-- You can adjust the actual color code as needed -->
     <color name="pure_white">#FFFFFF</color>
-    <color name="turquoise">#30D5C8</color>
+
 </resources>
