--- a/app/src/main/res/drawable/button_white_frame.xml
+++ b/app/src/main/res/drawable/button_white_frame.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <!-- Corner radius -->
     <corners android:radius="10dp"/>
-    <!-- Transparent background color -->
     <solid android:color="@android:color/transparent"/>
-    <!-- Border color and width -->
-    <stroke
-        android:width="2dp"
-        android:color="@android:color/white" />
+    <stroke android:width="2dp" android:color="@android:color/white"/>
+    <padding android:left="10dp" android:top="10dp" android:right="10dp" android:bottom="10dp"/>
 </shape>
