--- a/app/src/main/res/drawable/ic_expand.xml
+++ b/app/src/main/res/drawable/ic_expand.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="24.0">
     <path
         android:fillColor="#FFFFFFFF"
-        android:pathData="M7,10l5,5 5,-5z" />
+        android:pathData="M7.41,8.59L12,13.17l4.59,-4.58L18,10l-6,6 -6,-6 1.41,-1.41z" />
 </vector>
