--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,15 +6,7 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <!-- Custom Button Style with White Border -->
-    <style name="ButtonWithWhiteBorder">
-        <item name="android:background">@drawable/button_border_only</item>
-        <item name="android:textColor">@android:color/white</item>
-        <item name="android:textSize">14sp</item>
-        <item name="android:padding">10dp</item>
-        <item name="android:gravity">center</item>
-    </style>
-
+    <!-- Custom Button Style with light blue background -->
     <style name="CustomButtonStyle" parent="Widget.MaterialComponents.Button">
         <item name="backgroundTint">@color/teal_200</item>
         <item name="android:background">@drawable/rounded_button</item>
@@ -22,6 +14,12 @@
         <item name="android:padding">10dp</item>
     </style>
 
-
+    <!-- Custom Button Style with White Frame with Dark Blue Background -->
+    <style name="WhiteFrameStyle" parent="Widget.MaterialComponents.Button">
+        <!-- Overriding the color set by the theme's colorPrimary -->
+        <item name="backgroundTint">@null</item>
+        <item name="android:background">@drawable/button_white_frame</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 
 </resources>
