--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,10 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <!-- Style for error messages -->
+    <style name="ErrorStyle">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@color/teal_200</item>
+        <item name="android:padding">10dp</item> <!-- Optional: for better padding -->
+    </style>
 </resources>
