--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,7 +9,7 @@
         <!-- Secondary brand color -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/teal_200</item>
         <!-- Status bar color -->
         <item name="android:statusBarColor">@color/dark_blue</item>
         <!-- Custom button style -->
@@ -19,13 +19,53 @@
     <!-- Definition for the CustomButtonStyle -->
     <style name="CustomButtonStyle" parent="Widget.MaterialComponents.Button">
         <item name="android:textSize">18sp</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/dark_blue</item>
         <item name="android:padding">16dp</item>
         <!-- You can add more attributes to customize the appearance -->
     </style>
 
-    <!-- No Action Bar theme -->
+    <!-- Base application theme using Material Components. -->
     <style name="Theme.ChronoMetron.NoActionBar" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Customize your theme here -->
+        <!-- Primary and secondary colors -->
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorOnPrimary">@color/dark_blue</item>
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+
+        <!-- Surface and background colors -->
+        <item name="colorSurface">@color/white</item>
+        <item name="colorOnSurface">@color/black</item>
+        <item name="colorOnBackground">@color/white</item>
+
+        <!-- Error colors -->
+        <item name="colorError">@color/google_red</item>
+        <item name="colorOnError">@color/white</item>
+
+        <!-- Control and state colors -->
+        <item name="colorControlNormal">@color/white</item>
+        <item name="colorControlActivated">@color/dark_blue</item>
+        <item name="colorControlHighlight">@color/teal_700</item>
+
+        <!-- Status bar and window background -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:windowBackground">@color/dark_blue</item>
+
+        <!-- Custom EditText style -->
+        <item name="editTextStyle">@style/EditTextStyle</item>
     </style>
+
+
+
+    <!-- Custom EditText style -->
+    <style name="EditTextStyle" parent="Widget.MaterialComponents.TextInputEditText.OutlinedBox">
+        <item name="android:textColor">@color/white</item> <!-- Text color -->
+        <item name="android:textColorHint">@color/white</item> <!-- Hint text color -->
+        <item name="android:backgroundTint">@color/white</item> <!-- Background tint color -->
+        <item name="colorOnSurface">@color/white</item>
+    </style>
+
+
+
 </resources>
